--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,24 @@ group = project.maven_group
 minecraft {
 }
 
+repositories {
+    jcenter()
+    maven { url "https://dl.bintray.com/shedaniel/autoconfig1u/" }
+}
+
 dependencies {
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
+	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modCompile "io.github.prospector:modmenu:${project.mod_menu_version}"
+	modCompile "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+    modCompile "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+
+	include "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+    include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
 }
 
 processResources {
