--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,14 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.7.2+build.174
 
 # Mod Properties
-	mod_version = 0.1.0
+	mod_version = 1.0.0
 	maven_group = io.github.joaoh1
-	archives_base_name = okboomer
+	archives_base_name = okzoomer
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 	fabric_version=0.4.20+build.273-1.15
+	mod_menu_version=1.8.0+build.16
+	cloth_config_version=2.4-unstable.201911031154
+	auto_config_version=1.2.4
+
