--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on http://modmuss50.me/fabric.html
-	minecraft_version=1.15-pre6
-	yarn_mappings=1.15-pre6+build.3
+	minecraft_version=1.15.1-pre1
+	yarn_mappings=1.15.1-pre1+build.1
 	loader_version=0.7.2+build.174
 
 # Mod Properties
-	mod_version = 1.0.1
+	mod_version = 1.0.2
 	maven_group = io.github.joaoh1
 	archives_base_name = okzoomer
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.4.20+build.273-1.15
-	mod_menu_version=1.8.0+build.16
-	cloth_config_version=2.4-unstable.201911031154
+	fabric_version=0.4.24+build.279-1.15
+	mod_menu_version=1.8.1+build.17
+	cloth_config_version=2.5.2
 	auto_config_version=1.2.4
-
