--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on http://modmuss50.me/fabric.html
-	minecraft_version=1.15.1-pre1
-	yarn_mappings=1.15.1-pre1+build.1
+	minecraft_version=1.15.1
+	yarn_mappings=1.15.1+build.6
 	loader_version=0.7.2+build.174
 
 # Mod Properties
@@ -13,7 +13,7 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = okzoomer
 
 # Dependencies
-	fabric_version=0.4.24+build.279-1.15
-	mod_menu_version=1.8.1+build.17
-	cloth_config_version=2.5.2
+	fabric_version=0.4.25+build.282-1.15
+	mod_menu_version=1.8.2+build.18
+	cloth_config_version=2.5.3
 	auto_config_version=1.2.4
