--- a/build.gradle
+++ b/build.gradle
@@ -23,14 +23,16 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 
-	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
-	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modCompile "io.github.prospector:modmenu:${project.mod_menu_version}"
-	modCompile "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
-    modCompile "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
-
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "io.github.prospector:modmenu:${project.mod_menu_version}"
+	modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+    modImplementation "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+	
 	include "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
     include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+
+	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
 }
 
 processResources {
