--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on http://modmuss50.me/fabric.html
 	minecraft_version=1.15.1
-	yarn_mappings=1.15.1+build.24
+	yarn_mappings=1.15.1+build.37
 	loader_version=0.7.3+build.176
 
 # Mod Properties
-	mod_version = 2.1.0
+	mod_version = 2.1.0-beta.1
 	maven_group = io.github.joaoh1
 	archives_base_name = okzoomer
 
 # Dependencies
 	fabric_version=0.4.27+build.286-1.15
-	mod_menu_version=1.8.2+build.18
-	cloth_config_version=2.6.5
+	mod_menu_version=1.8.3+build.19
+	cloth_config_version=2.6.6
 	auto_config_version=1.2.4
