--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on http://modmuss50.me/fabric.html
-	minecraft_version=1.15.2-pre1
-	yarn_mappings=1.15.2-pre1+build.1
-	loader_version=0.7.4+build.177
+# Fabric Properties, check these on http://modmuss50.me/fabric.html
+minecraft_version=1.15.2-pre2
+yarn_mappings=1.15.2-pre2+build.3
+loader_version=0.7.4+build.177
 
 # Mod Properties
-	mod_version = 2.1.0-beta.2
-	maven_group = io.github.joaoh1
-	archives_base_name = okzoomer
+mod_version = 2.1.0-beta.2
+maven_group = io.github.joaoh1
+archives_base_name = okzoomer
 
 # Dependencies
-	fabric_version=0.4.28+build.288-1.15
-	mod_menu_version=1.8.3+build.19
-	cloth_config_version=2.6.6
-	auto_config_version=1.2.4
+fabric_version=0.4.28+build.288-1.15
+mod_menu_version=1.8.3+build.19
+cloth_config_version=2.7.1
+auto_config_version=1.2.4
