--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version=1.15.2-pre2
-yarn_mappings=1.15.2-pre2+build.3
-loader_version=0.7.4+build.177
+minecraft_version=1.15.2
+yarn_mappings=1.15.2+build.7
+loader_version=0.7.6+build.180
 
 # Mod Properties
-mod_version = 2.1.0-beta.2
+mod_version = 2.1.0-beta.3
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version=0.4.28+build.288-1.15
-mod_menu_version=1.8.3+build.19
-cloth_config_version=2.7.1
+fabric_version=0.4.29+build.290-1.15
+mod_menu_version=1.8.5+build.23
+cloth_config_version=2.8.3
 auto_config_version=1.2.4
