--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version=1.15.2
-yarn_mappings=1.15.2+build.11
-loader_version=0.7.6+build.181
+minecraft_version=20w06a
+yarn_mappings=20w06a+build.2
+loader_version=0.7.8+build.184
 
 # Mod Properties
-mod_version = 2.1.1
+mod_version = 2.1.2
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version=0.4.29+build.290-1.15
+fabric_version=0.4.30+build.294-1.16
 mod_menu_version=1.8.5+build.23
-cloth_config_version=2.9.2
+cloth_config_version=2.9.3
 auto_config_version=1.2.4
