--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
 minecraft_version=20w10a
-yarn_mappings=20w10a+build.6
+yarn_mappings=20w10a+build.10
 loader_version=0.7.8+build.186
 
 # Mod Properties
@@ -12,7 +12,7 @@ maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version=0.5.0+build.304-1.16
-mod_menu_version=1.10.1+build.30
-cloth_config_version=2.11
+fabric_version=0.5.1+build.305-1.16
+mod_menu_version=1.10.2+build.1
+cloth_config_version=3.0.1-unstable.202003051928
 auto_config_version=1.2.4
