--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version=20w10a
-yarn_mappings=20w10a+build.10
-loader_version=0.7.8+build.186
+minecraft_version = 20w12a
+yarn_mappings = 20w12a+build.19
+loader_version = 0.7.8+build.189
 
 # Mod Properties
-mod_version = 3.0.0
+mod_version = 3.0.1-20w12a
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version=0.5.1+build.305-1.16
-mod_menu_version=1.10.2+build.1
-cloth_config_version=3.0.1-unstable.202003051928
-auto_config_version=1.2.4
+fabric_version = 0.5.1+build.294-1.15
+mod_menu_version = 1.11.0+build.2
+cloth_config_version = 3.1.0-unstable
+auto_config_version = 1.2.4
