--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 20w12a
-yarn_mappings = 20w12a+build.19
-loader_version = 0.7.8+build.189
+minecraft_version = 20w16a
+yarn_mappings = 20w16a+build.4
+loader_version = 0.8.2+build.194
 
 # Mod Properties
-mod_version = 3.0.1-20w12a
+mod_version = 4.0.0-20w16a
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.5.1+build.294-1.15
-mod_menu_version = 1.11.0+build.2
-cloth_config_version = 3.1.0-unstable
-auto_config_version = 1.2.4
+fabric_version = 0.5.11+build.322-1.16
+mod_menu_version = 1.11.1+build.4
+cloth_config_version = 3.3.2-unstable
+fiber_version = 0.17.1-1
