--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ targetCompatibility = JavaVersion.VERSION_1_8
 
 archivesBaseName = project.archives_base_name
 
-if (System.env.CI == true) {
+if (System.env.CI == "true") {
 	def branch
 	branch = System.env.GITHUB_REF
 	branch = branch.substring(branch.lastIndexOf("/")+1)
