Add Cinematic Multiplier

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 20w19a
-yarn_mappings = 20w19a+build.8
-loader_version = 0.8.2+build.194
+minecraft_version = 20w20b
+yarn_mappings = 20w20b+build.1
+loader_version = 0.8.3+build.196
 
 # Mod Properties
-mod_version = 4.0.0-20w17a
+mod_version = 4.0.0-20w20b
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.10.7+build.344-1.16
+fabric_version = 0.10.9+build.346-1.16
 mod_menu_version = 1.11.4+build.9
 cloth_config_version = 4.1.0-unstable
 fiber_version = 0.21.0-1
