--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ if (System.env.CI == "true") {
 group = project.maven_group
 
 repositories {
+	//TODO - Revert the bad that has been committed.
+	maven { url 'https://jitpack.io' }
 	mavenCentral()
 }
 
