--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 20w20b
-yarn_mappings = 20w20b+build.1
-loader_version = 0.8.3+build.196
+minecraft_version = 20w21a
+yarn_mappings = 20w21a+build.16
+loader_version = 0.8.4+build.198
 
 # Mod Properties
-mod_version = 4.0.0-20w20b
+mod_version = 4.0.0-20w21a
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.10.9+build.346-1.16
-mod_menu_version = 1.11.4+build.9
-cloth_config_version = 4.1.0-unstable
-fiber_version = 0.21.0-1
+fabric_version = 0.10.10+build.347-1.16
+mod_menu_version = 1.11.6+build.11
+cloth_config_version = 4.4.0-unstable
+fiber_version = 0.22.1-1
