Alpha: The Beginning NOW it's ready for the epic first alpha release

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
 minecraft_version = 20w21a
-yarn_mappings = 20w21a+build.16
+yarn_mappings = 20w21a+build.17
 loader_version = 0.8.4+build.198
 
 # Mod Properties
-mod_version = 4.0.0-20w21a
+mod_version = 4.0.0-alpha.1.20w21a
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
