--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 20w21a
-yarn_mappings = 20w21a+build.17
-loader_version = 0.8.4+build.198
+minecraft_version = 1.16-pre2
+yarn_mappings = 1.16-pre2+build.2
+loader_version = 0.8.7+build.201
 
 # Mod Properties
-mod_version = 4.0.0-alpha.1.20w21a
+mod_version = 4.0.0-alpha.2.1.16.pre2
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.10.10+build.347-1.16
-mod_menu_version = 1.11.6+build.11
-cloth_config_version = 4.4.0-unstable
+fabric_version = 0.11.7+build.356-1.16
+mod_menu_version = 1.11.8+build.13
+cloth_config_version = 4.5.0-unstable
 fiber_version = 0.22.1-1
