--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 1.16-pre2
-yarn_mappings = 1.16-pre2+build.2
+minecraft_version = 1.16-pre5
+yarn_mappings = 1.16-pre5+build.1
 loader_version = 0.8.7+build.201
 
 # Mod Properties
@@ -12,7 +12,7 @@ maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.11.7+build.356-1.16
-mod_menu_version = 1.11.8+build.13
-cloth_config_version = 4.5.0-unstable
-fiber_version = 0.22.1-1
+fabric_version = 0.12.1+build.361-1.16
+mod_menu_version = 1.12.1+build.15
+cloth_config_version = 4.5.3
+fiber_version = 0.22.1-2
