--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,18 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 1.16-pre5
-yarn_mappings = 1.16-pre5+build.1
+minecraft_version = 1.16-pre6
+yarn_mappings = 1.16-pre6+build.3
 loader_version = 0.8.7+build.201
 
 # Mod Properties
-mod_version = 4.0.0-alpha.3.1.16.pre5
+mod_version = 4.0.0-alpha.4.1.16.pre6
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.12.1+build.361-1.16
+fabric_version = 0.12.3+build.363-1.16
 mod_menu_version = 1.12.1+build.15
 cloth_config_version = 4.5.3
 fiber_version = 0.23.0-1
+fiber2cloth_version = 3.0.0
