--- a/gradle.properties
+++ b/gradle.properties
@@ -2,18 +2,17 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 1.16-rc1
-yarn_mappings = 1.16-rc1+build.8
+minecraft_version = 1.16.1
+yarn_mappings = 1.16.1+build.1
 loader_version = 0.8.8+build.202
 
 # Mod Properties
-mod_version = 4.0.0-alpha.4.1.16.rc1
+mod_version = 4.0.0-alpha.4.1.16.1
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.12.5+build.367-1.16
-mod_menu_version = 1.12.1+build.15
-cloth_config_version = 4.5.5
+fabric_version = 0.13.1+build.370-1.16
+mod_menu_version = 1.12.2+build.16
+cloth_config_version = 4.5.6
 fiber_version = 0.23.0-1
-fiber2cloth_version = 3.0.1
