--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 1.16.1
-yarn_mappings = 1.16.1+build.19
+minecraft_version = 20w28a
+yarn_mappings = 20w28a+build.8
 loader_version = 0.8.9+build.203
 
 # Mod Properties
-mod_version = 4.0.0-alpha.4.1.16.1
+mod_version = 4.0.0-alpha.5+20w27a
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.14.1+build.372-1.16
-mod_menu_version = 1.12.2+build.16
+fabric_version = 0.14.3+build.374-1.16
+mod_menu_version = 1.12.2+build.17
 cloth_config_version = 4.5.6
 fiber_version = 0.23.0-1
