--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 1.16.1
-yarn_mappings = 1.16.1+build.21
-loader_version = 0.9.0+build.204
+minecraft_version = 1.16.2-rc1
+yarn_mappings = 1.16.2-rc1+build.6
+loader_version = 0.9.1+build.205
 
 # Mod Properties
-mod_version = 4.0.0-alpha.5+1.16.1
+mod_version = 4.0.0-alpha.6+1.16.2.rc1
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.16.2+build.385-1.16.1
-mod_menu_version = 1.14.5+build.30
-cloth_config_version = 4.6.0
-fiber_version = 0.23.0-1
+fabric_version = 0.17.1+build.394-1.16
+mod_menu_version = 1.14.6+build.31
+cloth_config_version = 4.7.0-unstable
+fiber_version = 0.23.0-2
