--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 1.16.2-rc2
-yarn_mappings = 1.16.2-rc2+build.1
+minecraft_version = 1.16.2
+yarn_mappings = 1.16.2+build.1
 loader_version = 0.9.1+build.205
 
 # Mod Properties
-mod_version = 4.0.0-alpha.6+1.16.2.rc2
+mod_version = 4.0.0-beta.1+1.16.2
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.17.1+build.394-1.16
+fabric_version = 0.17.2+build.396-1.16
 mod_menu_version = 1.14.6+build.31
 cloth_config_version = 4.7.0-unstable
 fiber_version = 0.23.0-2
