--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings = 1.16.2+build.12
 loader_version = 0.9.1+build.205
 
 # Mod Properties
-mod_version = 4.0.0-beta.3+1.16.2
+mod_version = 4.0.0+1.16.2
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
