Fix versions and modmenu dep

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ group = project.maven_group
 
 repositories {
 	mavenCentral()
+	maven {
+		url 'https://maven.terraformersmc.com/'
+	}
 }
 
 dependencies {
@@ -27,7 +30,7 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation "io.github.prospector:modmenu:${project.mod_menu_version}"
+	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 	modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
 	modImplementation "me.zeroeightsix:fiber:${project.fiber_version}"
 	
