--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,19 @@
 plugins {
-	id 'fabric-loom' version '0.5-SNAPSHOT'
+	id 'fabric-loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
-
-if (System.env.CI == "true") {
-	version = "${project.mod_version}-github.${System.env.GITHUB_RUN_NUMBER}"
-} else {
-	version = project.mod_version
-}
 
 group = project.maven_group
 
 repositories {
 	mavenCentral()
-	maven {
-		url 'https://maven.terraformersmc.com/'
-	}
+	maven { url 'https://maven.terraformersmc.com/' }
+	maven { url 'https://maven.shedaniel.me/' }
 }
 
 dependencies {
@@ -31,22 +24,14 @@ dependencies {
 	
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
-	modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
 	
 	include "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
 }
 
-processResources {
-	inputs.property "version", project.version
-
-	from(sourceSets.main.resources.srcDirs) {
-		include "fabric.mod.json"
-		expand "version": project.version
-	}
-
-	from(sourceSets.main.resources.srcDirs) {
-		exclude "fabric.mod.json"
-	}
+tasks.withType(JavaCompile).configureEach {
+	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
+	it.options.release = 17
 }
 
 // ensure that the encoding is set to UTF-8, no matter what the system default is
@@ -66,32 +51,4 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 
 jar {
 	from "LICENSE"
-}
-
-// configure the maven publication
-publishing {
-	repositories {
-		maven {
-		    name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/joaoh1/OkZoomer")
-            credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
-            }
-		}
-		// uncomment to publish to the local maven
-		// mavenLocal()
-	}
-
-	publications {
-		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
-			artifact(remapJar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
-		}
-	}
 }
