--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 1.16.5
-yarn_mappings = 1.16.5+build.10
-loader_version = 0.9.2+build.206
+minecraft_version = 1.19
+yarn_mappings = 1.19+build.2
+loader_version = 0.14.7
 
 # Mod Properties
-mod_version = 4.0.1+1.16.5
+mod_version = 4.0.1+1.19
 maven_group = io.github.joaoh1
 archives_base_name = okzoomer
 
 # Dependencies
-fabric_version = 0.19.0+build.398-1.16
-mod_menu_version = 1.14.15
-cloth_config_version = 4.7.0-unstable
+fabric_version = 0.56.0+1.19
+mod_menu_version = 4.0.0
+cloth_config_version = 7.0.72
