--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ group = project.maven_group
 
 repositories {
 	mavenCentral()
-	maven { url 'https://maven.terraformersmc.com/' }
-	maven { url 'https://maven.shedaniel.me/' }
+	maven { url "https://maven.terraformersmc.com/releases" }
+	maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -22,11 +22,13 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
-	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	
-	include "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	
+	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 }
 
 tasks.withType(JavaCompile).configureEach {
