--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs = -Xmx1G
 
 # Fabric Properties, check these on http://modmuss50.me/fabric.html
 minecraft_version = 1.19
-yarn_mappings = 1.19+build.2
-loader_version = 0.14.7
+yarn_mappings = 1.19+build.4
+loader_version = 0.14.9
 
 # Mod Properties
 mod_version = 4.0.1+1.19
 maven_group = io.github.joaoh1
-archives_base_name = okzoomer
+archives_base_name = okzoomer_v4.0.1+1.19
 
 # Dependencies
-fabric_version = 0.56.0+1.19
-mod_menu_version = 4.0.0
-cloth_config_version = 7.0.72
+fabric_version = 0.58.0+1.19
+mod_menu_version = 4.0.4
+cloth_config_version = 7.0.73
