--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loader_version = 0.14.7
 # Mod Properties
 mod_version = 4.0.1+1.19
 maven_group = io.github.joaoh1
-archives_base_name = okzoomer
+archives_base_name = fabrizoom
 
 # Dependencies
 fabric_version = 0.56.0+1.19
