--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs = -Xmx1G
-
-# Fabric Properties, check these on http://modmuss50.me/fabric.html
-minecraft_version = 1.19
-yarn_mappings = 1.19+build.2
-loader_version = 0.14.7
-
+org.gradle.jvmargs=-Xmx2G
+# Fabric Properties
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.4
+loader_version=0.14.8
+fabric_kotlin_version=1.8.3+kotlin.1.7.10
 # Mod Properties
-mod_version = 4.0.1+1.19
-maven_group = io.github.joaoh1
-archives_base_name = fabrizoom
-
+mod_version=1.0.0
+maven_group=io.github.trainb0y
+archives_base_name=fabrizoom
 # Dependencies
-fabric_version = 0.56.0+1.19
-mod_menu_version = 4.0.0
-cloth_config_version = 7.0.72
+# check this on https://modmuss50.me/fabric.html
+mod_menu_version=4.0.6
+spruce_ui_version=4.0.0+1.19
+configurate_version=4.1.2
