--- a/gradle.properties
+++ b/gradle.properties
@@ -7,11 +7,11 @@ yarn_mappings=1.19.2+build.4
 loader_version=0.14.9
 fabric_kotlin_version=1.8.3+kotlin.1.7.10
 # Mod Properties
-mod_version=1.1.1
+mod_version=1.2.0-dev
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 mod_menu_version=4.0.6
-spruce_ui_version=4.0.0+1.19
+yacl_version=1.5.0
 configurate_version=4.1.2
