--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings=1.19.2+build.4
 loader_version=0.14.9
 fabric_kotlin_version=1.8.5+kotlin.1.7.20
 # Mod Properties
-mod_version=1.2.0-dev
+mod_version=1.2.0
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
 # Dependencies
