--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.4
+minecraft_version=1.19.3-pre2
+yarn_mappings=1.19.3-pre2+build.1
 loader_version=0.14.9
-fabric_kotlin_version=1.8.5+kotlin.1.7.20
+fabric_kotlin_version=1.8.6+kotlin.1.7.21
 # Mod Properties
-mod_version=1.2.1
+mod_version=1.2.2
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-mod_menu_version=4.0.6
-yacl_version=1.5.0
+mod_menu_version=4.1.1
+yacl_version=1.7.1
 configurate_version=4.1.2
