--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,17 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.3-pre2
-yarn_mappings=1.19.3-pre2+build.1
-loader_version=0.14.9
+minecraft_version=1.19.3-rc1
+yarn_mappings=1.19.3-rc1+build.1
+loader_version=0.14.10
 fabric_kotlin_version=1.8.6+kotlin.1.7.21
+fabric_api_version=0.68.1+1.19.3
 # Mod Properties
 mod_version=1.2.2
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-mod_menu_version=4.1.1
-yacl_version=1.7.1
+mod_menu_version=5.0.0-alpha.4
+yacl_version=2.0.0
 configurate_version=4.1.2
