--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@ archives_base_name=fabrizoom
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 mod_menu_version=5.0.0-alpha.4
-yacl_version=2.0.0
+yacl_version=2.0.0+split_base-SNAPSHOT
 configurate_version=4.1.2
