--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.3-rc1
-yarn_mappings=1.19.3-rc1+build.1
+minecraft_version=1.19.3
+yarn_mappings=1.19.3+build.1
 loader_version=0.14.10
 fabric_kotlin_version=1.8.6+kotlin.1.7.21
 fabric_api_version=0.68.1+1.19.3
@@ -14,5 +14,5 @@ archives_base_name=fabrizoom
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 mod_menu_version=5.0.0-alpha.4
-yacl_version=2.0.0+split_base-SNAPSHOT
+yacl_version=2.0.0
 configurate_version=4.1.2
