--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.1
-loader_version=0.14.14
-fabric_kotlin_version=1.9.1+kotlin.1.8.10
-fabric_api_version=0.75.3+1.19.4
+minecraft_version=1.20-pre6
+yarn_mappings=1.20-pre6+build.1
+loader_version=0.14.21
+fabric_kotlin_version=1.9.4+kotlin.1.8.21
+fabric_api_version=0.82.0+1.20
 # Mod Properties
-mod_version=1.2.4
+mod_version=1.2.5
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-mod_menu_version=5.0.2
-yacl_version=2.3.0
+mod_menu_version=6.2.2
+yacl_version=2.4.2+HEAD-SNAPSHOT
 configurate_version=4.1.2
