--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.20-pre6
 yarn_mappings=1.20-pre6+build.1
 loader_version=0.14.21
 fabric_kotlin_version=1.9.4+kotlin.1.8.21
-fabric_api_version=0.82.0+1.20
+fabric_api_version=0.82.1+1.20
 # Mod Properties
 mod_version=1.2.5
 maven_group=io.github.trainb0y
@@ -14,5 +14,5 @@ archives_base_name=fabrizoom
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 mod_menu_version=6.2.2
-yacl_version=2.4.2+HEAD-SNAPSHOT
+yacl_version=2.5.1-beta.1+1.20
 configurate_version=4.1.2
