--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20-pre6
-yarn_mappings=1.20-pre6+build.1
-loader_version=0.14.21
-fabric_kotlin_version=1.9.4+kotlin.1.8.21
-fabric_api_version=0.82.1+1.20
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.6
+loader_version=0.14.22
+fabric_kotlin_version=1.10.10+kotlin.1.9.10
+fabric_api_version=0.88.1+1.20.1
 # Mod Properties
 mod_version=1.2.5
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-mod_menu_version=6.2.2
-yacl_version=3.0.0-beta.4+1.20
+mod_menu_version=7.2.2
+yacl_version=3.1.1+1.20
 configurate_version=4.1.2
