--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,6 @@ archives_base_name=fabrizoom
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 mod_menu_version=7.2.2
-yacl_version=3.1.1+1.20
+# todo remove snapshot once 1.20.2 gets an actual release
+yacl_version=3.2.0+1.20.2+HEAD-SNAPSHOT+HEAD-SNAPSHOT
 configurate_version=4.1.2
