--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,33 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
+
+# Kotlin
+kotlin_version=1.9.10
+shadow_version=8.1.1
+
+# Minecraft
 minecraft_version=1.20.2
-loader_version=0.14.22
+enabled_platforms=fabric,forge
+
+# Architectury
+architectury_version=9.2.12
+architectury_loom_version=1.3-SNAPSHOT
+architectury_gradle_plugin_version=3.4-SNAPSHOT
+
+# Fabric
+fabric_loader_version=0.14.23
 fabric_kotlin_version=1.10.10+kotlin.1.9.10
-fabric_api_version=0.89.1+1.20.2
+fabric_api_version=0.90.4+1.20.2
+
+# Forge
+forge_version=48.0.33
+
+# Dependencies
+fabric_mod_menu_version=7.2.2
+yacl_version=3.2.1+1.20.2
+configurate_version=4.1.2
+
 # Mod Properties
 mod_version=1.3.0
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-mod_menu_version=7.2.2
-# todo remove snapshot once 1.20.2 gets an actual release
-yacl_version=3.2.0+1.20.2+HEAD-SNAPSHOT+HEAD-SNAPSHOT
-configurate_version=4.1.2
