--- a/gradle.properties
+++ b/gradle.properties
@@ -21,9 +21,10 @@ fabric_api_version=0.90.4+1.20.2
 
 # Forge
 forge_version=48.0.33
+forge_kotlin_version=4.4.0
 
 # Dependencies
-fabric_mod_menu_version=7.2.2
+fabric_mod_menu_version=8.0.0
 yacl_version=3.2.1+1.20.2
 configurate_version=4.1.2
 
