--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 
 # Kotlin
 kotlin_version=1.9.10
+kotlinx_json_version=1.6.0
 shadow_version=8.1.1
 
 # Minecraft
@@ -26,7 +27,6 @@ forge_kotlin_version=4.4.0
 # Dependencies
 fabric_mod_menu_version=8.0.0
 yacl_version=3.2.1+1.20.2
-configurate_version=4.1.2
 
 # Mod Properties
 mod_version=1.3.0
