--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -5,8 +5,9 @@ license="MIT"
 
 [[mods]]
 modId="fabrizoom"
-version="${version}"
+version="${mod_version}"
 displayName="FabriZoom"
+authors="trainb0y, EnnuiL"
 description="Lightweight, cross-platform, configurable zoom button. Fork of OkZoomer v4"
 logoFile="assets/fabrizoom/icon.png"
 
@@ -23,3 +24,10 @@ mandatory=true
 versionRange="[1.20.2]"
 ordering="NONE"
 side="CLIENT"
+
+[[dependencies.fabrizoom]]
+modId = "yet_another_config_lib_v3"
+mandatory = true
+versionRange = "[3,)"
+ordering = "NONE"
+side = "CLIENT"
