readme tweaks, set version, tweak option granularity

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,6 @@ forge_kotlin_version=4.4.0
 fabric_mod_menu_version=8.0.0
 yacl_version=3.2.1+1.20.2
 # Mod Properties
-mod_version=2.0.0
+mod_version=2.0.0+1.20.2
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
