--- a/gradle.properties
+++ b/gradle.properties
@@ -2,18 +2,18 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.1
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.1
 loader_version=0.14.22
 fabric_kotlin_version=1.10.10+kotlin.1.9.10
-fabric_api_version=0.89.1+1.20.2
+fabric_api_version=0.83.0+1.20
 # Mod Properties
-mod_version=1.3.0
+mod_version=1.3.0-backport
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 mod_menu_version=7.2.2
 # todo remove snapshot once 1.20.2 gets an actual release
-yacl_version=3.2.0+1.20.2+HEAD-SNAPSHOT+HEAD-SNAPSHOT
+yacl_version=3.2.1+1.20
 configurate_version=4.1.2
