--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ kotlinx_json_version=1.6.0
 shadow_version=8.1.1
 # Minecraft
 minecraft_version=1.20.2
-enabled_platforms=fabric,forge
+enabled_platforms=fabric,forge,neoforge
 # Architectury
 architectury_version=9.2.12
 architectury_loom_version=1.4-SNAPSHOT
@@ -18,6 +18,8 @@ fabric_api_version=0.90.7+1.20.2
 # Forge
 forge_version=48.0.35
 forge_kotlin_version=4.5.0
+# NeoForge
+neoforge_version=20.2.59-beta
 # Dependencies
 fabric_mod_menu_version=8.0.0
 yacl_version=3.2.1+1.20.2
