--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
 # Kotlin
-kotlin_version=1.9.20
+kotlin_version=1.9.21
 kotlinx_json_version=1.6.0
 shadow_version=8.1.1
 # Minecraft
@@ -12,18 +12,18 @@ architectury_version=9.2.12
 architectury_loom_version=1.4-SNAPSHOT
 architectury_gradle_plugin_version=3.4-SNAPSHOT
 # Fabric
-fabric_loader_version=0.14.24
-fabric_kotlin_version=1.10.13+kotlin.1.9.20
-fabric_api_version=0.90.7+1.20.2
+fabric_loader_version=0.15.0
+fabric_kotlin_version=1.10.16+kotlin.1.9.21
+fabric_api_version=0.91.1+1.20.2
 # Forge
 forge_version=48.0.40
-forge_kotlin_version=4.6.1
+forge_kotlin_version=4.7.0
 # NeoForge
-neoforge_version=20.2.60-beta
+neoforge_version=20.2.86
 # Dependencies
 fabric_mod_menu_version=8.0.0
 yacl_version=3.2.1+1.20.2
 # Mod Properties
-mod_version=2.0.0+1.20.2
+mod_version=2.0.1+1.20.2
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
