Begin porting to 1.20.5

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,29 +1,27 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
 # Kotlin
-kotlin_version=1.9.21
-kotlinx_json_version=1.6.0
+kotlin_version=1.9.23
+kotlinx_json_version=1.6.3
 shadow_version=8.1.1
 # Minecraft
-minecraft_version=1.20.2
-enabled_platforms=fabric,forge,neoforge
+minecraft_version=1.20.5
+enabled_platforms=fabric,neoforge
 # Architectury
-architectury_version=9.2.12
-architectury_loom_version=1.4-SNAPSHOT
+architectury_version=12.0.25-beta
+architectury_loom_version=1.6-SNAPSHOT
 architectury_gradle_plugin_version=3.4-SNAPSHOT
 # Fabric
-fabric_loader_version=0.15.0
-fabric_kotlin_version=1.10.16+kotlin.1.9.21
-fabric_api_version=0.91.1+1.20.2
-# Forge
-forge_version=48.0.40
-forge_kotlin_version=4.7.0
+fabric_loader_version=0.15.10
+fabric_kotlin_version=1.10.19+kotlin.1.9.23
+fabric_api_version=0.97.5+1.20.5
 # NeoForge
-neoforge_version=20.2.86
+neoforge_version=20.5.3-beta
+forge_kotlin_version=4.10.0
 # Dependencies
-fabric_mod_menu_version=8.0.0
-yacl_version=3.2.1+1.20.2
+fabric_mod_menu_version=10.0.0-beta.1
+yacl_version=3.4.1+1.20.5
 # Mod Properties
-mod_version=2.0.1+1.20.2
+mod_version=2.0.1+1.20.5
 maven_group=io.github.trainb0y
 archives_base_name=fabrizoom
