--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -17,20 +17,20 @@ config = "fabrizoom.mixins.json"
 [[dependencies.fabrizoom]]
 modId = "neoforge"
 mandatory = true
-versionRange = "[20,)"
+versionRange = "[21.0.0-beta,)"
 ordering = "NONE"
 side = "CLIENT"
 
 [[dependencies.fabrizoom]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.20.6]"
+versionRange = "[1.21]"
 ordering = "NONE"
 side = "CLIENT"
 
 [[dependencies.fabrizoom]]
 modId = "yet_another_config_lib_v3"
 mandatory = true
-versionRange = "[3.4,)"
+versionRange = "[3.5,)"
 ordering = "NONE"
 side = "CLIENT"
